--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -26,6 +28,43 @@
             </div>
         </div>
     </header>
+    <main class="main-content">
+        <div class="main-text">
+            <div class="txt">
+                <h1>EL FESTIVAL DE ROCK MAS GRANDE, EN ARGENTINA</h1>
+                <div class="txt-content">
+                    <p>Monster of rock, el festival mas grande de rock de la historia llega a Argentina en el año 2024
+                        hecho
+                        solo y para los
+                        verdaderos fans del rock/haevy metal con muchisimas bandas.</p>
+                </div>
+                <div class="btn">
+                    <button>Comprar entradas</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
