--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <li><a href="./paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <img src="./img/iconos/facebook.png" alt="">
-                <img src="./img/iconos/instagram.png" alt="">
-                <img src="./img/iconos/gorjeo.png" alt="">
+                <a href="#"><img src="./img/iconos/facebook.png" alt=""></a>
+                <a href="#"><img src="./img/iconos/instagram.png" alt=""></a>
+                <a href="#"><img src="./img/iconos/gorjeo.png" alt=""></a>
+
             </div>
         </div>
     </header>
@@ -38,24 +39,73 @@
                         solo y para los
                         verdaderos fans del rock/haevy metal con muchisimas bandas.</p>
                 </div>
-                <div class="btn">
-                    <button>Comprar entradas</button>
-                </div>
+                <a href="#" class="btn-1">Comprar entradas</a>
             </div>
         </div>
+        <div class="sponsor"></div>
+        <section class="section-metallica">
+            <div class="metallica-container1">
+                <h2>Vuelve Metallica</h2>
+                <p>La iconica banda metallica vuelve y mas presente que nunca luego de haber sido de las protagonista en
+                    el iconico
+                    concierto en el 1991 donde hubo un total de 1.6 millones de personas</p>
+                <a href="#" class="btn-1">Mas informacion</a>
+            </div>
+            <div class="metallica-container2"></div>
+        </section>
+        <section class="section-expansion">
+            <div class="expansion-container2"></div>
+            <div class="expansion-container1">
+                <h2>Expandimos el espacio</h2>
+                <p>En cada locación donde se realize el festival se ampliara un 50% de capacidad para que todos puedan
+                    ir.</p>
+            </div>
+        </section>
+        <section class="section-cartel"></section>
+        <section class="section-mapa">
+            <div class="mapa-content">
+                <h2>CONOCE LAS LOCACIONES</h2>
+                <a href="./paginas/shows.html" class="btn-1">LOCACIONES</a>
+            </div>
+        </section>
+
+        <footer class="pie-de-pagina">
+            <div class="g1">
+                <div class="box">
+                    <figure>
+                        <a href="#">
+                            <img src="./img/logo-monsterofrock.png" alt="" />
+                        </a>
+                    </figure>
+                </div>
+                <div class="box">
+                    <h2>SOBRE NOSOTROS</h2>
+                    <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
+                        1996 —con excepción de
+                        1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
+                        noroeste de Leicestershire</p>
+                    <p>Desde 1980 a 1996.</p>
+                </div>
+                <div class="box">
+                    <h2>SIGUENOS</h2>
+                    <div class="redsocial">
+                        <a href="" class="fb">
+                            <img src="./img/iconos/facebook.png" alt="">
+                        </a>
+                        <a href="" class="ig">
+                            <img src="./img/iconos/instagram.png" alt="">
+                        </a>
+                        <a href="" class="tw">
+                            <img src="./img/iconos/gorjeo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="g2">
+                <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+            </div>
+        </footer>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
