Terminando la pagina de shows

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MONSTER OF ROCK 2024</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
@@ -57,7 +57,7 @@
             <div class="expansion-container2"></div>
             <div class="expansion-container1">
                 <h2>Expandimos el espacio</h2>
-                <p>En cada locación donde se realize el festival se ampliara un 50% de capacidad para que todos puedan
+                <p>En cada locación donde se realice el festival se ampliara un 50% de capacidad para que todos puedan
                     ir.</p>
             </div>
         </section>
