--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -4,10 +4,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MONSTER OF ROCK 2024</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="nav">
+            <div class="logo"><img src="../img/logo-monsterofrock.png" alt=""></div>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./paginas/noticias.html">Noticias</a></li>
+                <li><a href="./paginas/shows.html">Shows</a></li>
+                <li><a href="./paginas/sponsor.html">Sponsors</a></li>
+                <li><a href="./paginas/login.html">Iniciar sesion</a></li>
+            </ul>
+            <div class="redes">
+                <a href="#"><img src="../img/iconos/facebook.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/instagram.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/gorjeo.png" alt=""></a>
+            </div>
+        </div>
+    </header>
+
+    <div class="fondo-shows">
+        <div class="contenedor">
+            <div class="contenedor-conciertos">
+                <div class="card" style="background-image: url('../img/grilla-concierto/buenosaires.jpg')">
+                    <div class="textos">
+                        <h3>Buenos Aires</h3>
+                        <p>1 de Marzo 2024</p>
+                    </div>
+                </div>
+                <div class="card" style="background-image: url('../img/grilla-concierto/catamarca.jpg')">
+                    <div class="textos">
+                        <h3>La pampa</h3>
+                        <p>2 de mayo 2024</p>
+                    </div>
+                </div>
+                <div class="card" style="background-image: url('../img/grilla-concierto/lapampa.jpg')">
+                    <div class="textos">
+                        <h3>Catamarca</h3>
+                        <p>23 de junio 2024</p>
+                    </div>
+                </div>
+
+                <div class="card" style="background-image: url('../img/grilla-concierto/caba.jpg')">
+                    <div class="textos">
+                        <h3>Cordoba</h3>
+                        <p>15 de julio 2024</p>
+                    </div>
+                </div>
+                <div class="card" style="background-image: url('../img/grilla-concierto/santacruz.jpg')">
+                    <div class="textos">
+                        <h3>Santa Cruz</h3>
+                        <p>13 de abril 2024</p>
+                    </div>
+                </div>
+                <div class="card" style="background-image: url('../img/grilla-concierto/entrerios.jpg')">
+                    <div class="textos">
+                        <h3>Entre Rios</h3>
+                        <p>2 de abril 2024</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="banner" style="background-image: url('../img/grilla-concierto/cartel.jpg')">
+                <h3>LEYENDAS DEL ROCK</h3>
+                <ul>
+                    <li>METALLICA</li>
+                    <li>JUDAS PRIEST</li>
+                    <li>MEGADETH</li>
+                    <li>GUNS N ROSES</li>
+                    <li>SLAYER</li>
+                    <li>SLIPKNOT</li>
+                    <li>Y MÁS...</li>
+                </ul>
+                <button class="boton">Comprar Boletos</button>
+            </div>
+        </div>
+    </div>
+
+    <footer class="pie-de-pagina">
+        <div class="g1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="../img/logo-monsterofrock.png" alt="" />
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
+                    1996 —con excepción de
+                    1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
+                    noroeste de Leicestershire</p>
+                <p>Desde 1980 a 1996.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redsocial">
+                    <a href="" class="fb">
+                        <img src="../img/iconos/facebook.png" alt="">
+                    </a>
+                    <a href="" class="ig">
+                        <img src="../img/iconos/instagram.png" alt="">
+                    </a>
+                    <a href="" class="tw">
+                        <img src="../img/iconos/gorjeo.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="g2">
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+        </div>
+    </footer>
+
+
 
 </body>
 
