terminando la paginas de noticias

--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -14,10 +14,10 @@
             <div class="logo"><img src="../img/logo-monsterofrock.png" alt=""></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./paginas/noticias.html">Noticias</a></li>
-                <li><a href="./paginas/shows.html">Shows</a></li>
-                <li><a href="./paginas/sponsor.html">Sponsors</a></li>
-                <li><a href="./paginas/login.html">Iniciar sesion</a></li>
+                <li><a href="../paginas/noticias.html">Noticias</a></li>
+                <li><a href="../paginas/shows.html">Shows</a></li>
+                <li><a href="../paginas/sponsor.html">Sponsors</a></li>
+                <li><a href="../paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
                 <a href="#"><img src="../img/iconos/facebook.png" alt=""></a>
