--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -5,9 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="nav">
+            <div class="logo"><img src="../img/logo-monsterofrock.png" alt=""></div>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../paginas/noticias.html">Noticias</a></li>
+                <li><a href="../paginas/shows.html">Shows</a></li>
+                <li><a href="../paginas/sponsor.html">Sponsors</a></li>
+                <li><a href="../paginas/login.html">Iniciar sesion</a></li>
+            </ul>
+            <div class="redes">
+                <a href="#"><img src="../img/iconos/facebook.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/instagram.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/gorjeo.png" alt=""></a>
+            </div>
+        </div>
+    </header>
+    <div class="fondo">
+        <div class="container-sponsor">
+            <div class="sponsor-titulo">
+                <h2>PRESENTA</h2>
+            </div>
+            <div class="sponsor2">
+                <a href="https://www.flow.com.ar/" target="_blank"><img
+                        src="../img/sponsors/62b9be26c9f7d62f82997f0b_flow-p-500.png" alt=""></a>
+            </div>
+            <div class="sponsor-titulo">
+                <h2>MEDIOS DE PAGO</h2>
+            </div>
+            <div class="sponsor4">
+                <a href="https://www.santander.com.ar/" target="_blank"><img src="../img/sponsors/santander.png"
+                        alt=""></a>
+                <a href="https://www.americanexpress.com/es-ar/" target="_blank"><img src="../img/sponsors/amex.png"
+                        alt=""></a>
+            </div>
+            <div class="sponsor-titulo">
+                <h2>INVITAN</h2>
+            </div>
+            <div class="sponsor6">
+                <a href="https://www.budweiser.com.ar/" target="_blank"><img src="../img/sponsors/budweiser.png"
+                        class="bud" alt=""></a>
+                <a href="https://www.axionenergy.com/" target="_blank"><img src="../img/sponsors/axion.png"></a>
+            </div>
+            <div class="sponsor-titulo">
+                <h2>COLABORAN</h2>
+            </div>
+            <div class="sponsor8">
+                <a href="https://www.fernetbranca.com/es" target="_blank"><img src="../img/sponsors/fernet.png"
+                        alt=""></a>
+                <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png" alt=""></a>
+                <a href="https://www.laespumeria.com/" target="_blank"><img src="../img/sponsors/laespumeroa.png"
+                        alt=""></a>
+                <a href="#" target="_blank"><img src="../img/sponsors/united.png alt=""></a>
+            </div>
+            <div class=" sponsor-titulo">
+                    <h2>PRODUCEN</h2>
+            </div>
+            <div class="sponsor10">
+                <a href="https://dfentertainment.com/" target="_blank"><img src="../img/sponsors/df.png" alt=""></a>
+                <a href="https://www.c3presents.com/" target="_blank"><img src="../img/sponsors/c3.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+
+    <footer class="pie-de-pagina">
+        <div class="g1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="../img/logo-monsterofrock.png" alt="" />
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
+                    1996 —con excepción de
+                    1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
+                    noroeste de Leicestershire</p>
+                <p>Desde 1980 a 1996.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redsocial">
+                    <a href="" class="fb">
+                        <img src="../img/iconos/facebook.png" alt="">
+                    </a>
+                    <a href="" class="ig">
+                        <img src="../img/iconos/instagram.png" alt="">
+                    </a>
+                    <a href="" class="tw">
+                        <img src="../img/iconos/gorjeo.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="g2">
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+        </div>
+    </footer>
+
 
 </body>
 
