Terminando el login paa

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -4,10 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MONSTER OF ROCK 2024</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="nav">
+            <div class="logo"><img src="../img/logo-monsterofrock.png" alt=""></div>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../paginas/noticias.html">Noticias</a></li>
+                <li><a href="../paginas/shows.html">Shows</a></li>
+                <li><a href="../paginas/sponsor.html">Sponsors</a></li>
+                <li><a href="../paginas/login.html">Iniciar sesion</a></li>
+            </ul>
+            <div class="redes">
+                <a href="#"><img src="../img/iconos/facebook.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/instagram.png" alt=""></a>
+                <a href="#"><img src="../img/iconos/gorjeo.png" alt=""></a>
+            </div>
+        </div>
+    </header>
+    <div class="fondo-login">
+        <div class="foto-login">
+            <div class="login-login">
+                <h2>LOGIN</h2>
+            </div>
+            <div class="formulario">
+                <form method="post">
+                    <div class="username">
+                        <input type="text" required>
+                        <label>Nombre de usuario</label>
+                    </div>
+                    <div class="contraseña">
+                        <input type="password" required>
+                        <label>Contraseña</label>
+                    </div>
+                    <div class="recordar">Olvidaste la contraseña??</div>
+                    <input type="submit" value="Iniciar">
+                    <div class="registrarse">
+                        <a href="#">Registrate</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
