--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -26,7 +26,6 @@
             </div>
         </div>
     </header>
-
     <div class="fondo-shows">
         <div class="contenedor">
             <div class="contenedor-conciertos">
@@ -48,7 +47,6 @@
                         <p>23 de junio 2024</p>
                     </div>
                 </div>
-
                 <div class="card" style="background-image: url('../img/grilla-concierto/caba.jpg')">
                     <div class="textos">
                         <h3>Cordoba</h3>
@@ -68,7 +66,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="banner" style="background-image: url('../img/grilla-concierto/cartel.jpg')">
                 <h3>LEYENDAS DEL ROCK</h3>
                 <ul>
@@ -84,7 +81,6 @@
             </div>
         </div>
     </div>
-
     <footer class="pie-de-pagina">
         <div class="g1">
             <div class="box">
@@ -118,12 +114,9 @@
             </div>
         </div>
         <div class="g2">
-            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;)</small>
         </div>
     </footer>
-
-
-
 </body>
 
 </html>
