--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                 <a href="./paginas/shows.html" class="btn-1">LOCACIONES</a>
             </div>
         </section>
-
         <footer class="pie-de-pagina">
             <div class="g1">
                 <div class="box">
@@ -102,15 +101,10 @@
                 </div>
             </div>
             <div class="g2">
-                <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+                <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.Luka Leguizamon ;)</small>
             </div>
         </footer>
     </main>
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
