--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -28,7 +28,6 @@
             </div>
         </div>
     </header>
-
     <div class="slipknot">
         <div id="carouselE" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -113,8 +112,6 @@
                 target="_blank">Megadeth anunció la salida de su guitarrista Kiko Loureiro</a>
         </div>
     </div>
-
-
     <footer class="pie-de-pagina">
         <div class="g1">
             <div class="box">
@@ -148,16 +145,9 @@
             </div>
         </div>
         <div class="g2">
-            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.Luka Leguizamon ;)</small>
         </div>
     </footer>
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
