--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -72,7 +72,6 @@
             </div>
         </div>
     </div>
-
     <footer class="pie-de-pagina">
         <div class="g1">
             <div class="box">
@@ -106,11 +105,9 @@
             </div>
         </div>
         <div class="g2">
-            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.</small>
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;) </small>
         </div>
     </footer>
-
-
 </body>
 
 </html>
