--- a/paginas/login.html
+++ b/paginas/login.html
@@ -50,6 +50,42 @@
             </div>
         </div>
     </div>
+    <footer class="pie-de-pagina">
+        <div class="g1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="./img/logo-monsterofrock.png" alt="" />
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
+                    1996 —con excepción de
+                    1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
+                    noroeste de Leicestershire</p>
+                <p>Desde 1980 a 1996.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redsocial">
+                    <a href="" class="fb">
+                        <img src="./img/iconos/facebook.png" alt="">
+                    </a>
+                    <a href="" class="ig">
+                        <img src="./img/iconos/instagram.png" alt="">
+                    </a>
+                    <a href="" class="tw">
+                        <img src="./img/iconos/gorjeo.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="g2">
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.Luka Leguizamon ;)</small>
+        </div>
+    </footer>
 
 
 </body>
