--- a/paginas/login.html
+++ b/paginas/login.html
@@ -55,7 +55,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="./img/logo-monsterofrock.png" alt="" />
+                        <img src="../img/logo-monsterofrock.png" alt="" />
                     </a>
                 </figure>
             </div>
@@ -71,13 +71,13 @@
                 <h2>SIGUENOS</h2>
                 <div class="redsocial">
                     <a href="" class="fb">
-                        <img src="./img/iconos/facebook.png" alt="">
+                        <img src="../img/iconos/facebook.png" alt="">
                     </a>
                     <a href="" class="ig">
-                        <img src="./img/iconos/instagram.png" alt="">
+                        <img src="../img/iconos/instagram.png" alt="">
                     </a>
                     <a href="" class="tw">
-                        <img src="./img/iconos/gorjeo.png" alt="">
+                        <img src="../img/iconos/gorjeo.png" alt="">
                     </a>
                 </div>
             </div>
