probando el github

--- a/paginas/login.html
+++ b/paginas/login.html
@@ -35,7 +35,7 @@
                 <form method="post">
                     <div class="username">
                         <input type="text" required>
-                        <label>Nombre de usuario</label>
+                        <label>Email</label>
                     </div>
                     <div class="contraseña">
                         <input type="password" required>
