--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/2cb25f2c39.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="nav">
-            <div class="logo"><img src="./img/logo-monsterofrock.png" alt=""></div>
+            <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" alt=""></a></div>
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./paginas/noticias.html">Noticias</a></li>
@@ -25,9 +30,15 @@
                 <a href="#"><img src="./img/iconos/facebook.png" alt=""></a>
                 <a href="#"><img src="./img/iconos/instagram.png" alt=""></a>
                 <a href="#"><img src="./img/iconos/gorjeo.png" alt=""></a>
-
             </div>
         </div>
+        <ul class="nav-menu">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Shows</a></li>
+            <li><a href="#">Sponsors</a></li>
+            <li><a href="#">Login</a></li>
+        </ul>
     </header>
     <main class="main-content">
         <div class="main-text">
