--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <li><a href="./paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <a href="#"><img src="./img/iconos/facebook.png" alt=""></a>
-                <a href="#"><img src="./img/iconos/instagram.png" alt=""></a>
-                <a href="#"><img src="./img/iconos/gorjeo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="./img/iconos/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="./img/iconos/instagram.png" alt=""></a>
+                <a href="https://twitter.com/" target="_blank"><img src="./img/iconos/gorjeo.png" alt=""></a>
             </div>
         </div>
         <ul class="nav-menu">
@@ -83,7 +83,7 @@
             <div class="g1">
                 <div class="box">
                     <figure>
-                        <a href="#">
+                        <a href="./index.html">
                             <img src="./img/logo-monsterofrock.png" alt="" />
                         </a>
                     </figure>
@@ -99,13 +99,13 @@
                 <div class="box">
                     <h2>SIGUENOS</h2>
                     <div class="redsocial">
-                        <a href="" class="fb">
+                        <a href="https://www.facebook.com/" target="_blank"" class=" fb">
                             <img src="./img/iconos/facebook.png" alt="">
                         </a>
-                        <a href="" class="ig">
+                        <a href="https://www.instagram.com/" target="_blank" class="ig">
                             <img src="./img/iconos/instagram.png" alt="">
                         </a>
-                        <a href="" class="tw">
+                        <a href="https://twitter.com/" target="_blank" class="tw">
                             <img src="./img/iconos/gorjeo.png" alt="">
                         </a>
                     </div>
