--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MONSTER OF ROCK 2024</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
         <div class="nav">
-            <div class="logo"><img src="../img/logo-monsterofrock.png" alt=""></div>
+            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../paginas/noticias.html">Noticias</a></li>
@@ -20,9 +20,9 @@
                 <li><a href="../paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <a href="#"><img src="../img/iconos/facebook.png" alt=""></a>
-                <a href="#"><img src="../img/iconos/instagram.png" alt=""></a>
-                <a href="#"><img src="../img/iconos/gorjeo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
+                <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
         </div>
     </header>
@@ -76,7 +76,7 @@
         <div class="g1">
             <div class="box">
                 <figure>
-                    <a href="#">
+                    <a href="../index.html">
                         <img src="../img/logo-monsterofrock.png" alt="" />
                     </a>
                 </figure>
@@ -92,14 +92,14 @@
             <div class="box">
                 <h2>SIGUENOS</h2>
                 <div class="redsocial">
-                    <a href="" class="fb">
+                    <a href="https://www.facebook.com/" target="_blank"" class=" fb">
                         <img src="../img/iconos/facebook.png" alt="">
                     </a>
-                    <a href="" class="ig">
+                    <a href="https://www.instagram.com/" target="_blank" class="ig">
                         <img src="../img/iconos/instagram.png" alt="">
                     </a>
-                    <a href="" class="tw">
-                        <img src="../img/iconos/gorjeo.png" alt="">
+                    <a href="https://twitter.com/" target="_blank" class="tw">
+                        <img src="./img/iconos/gorjeo.png" alt="">
                     </a>
                 </div>
             </div>
