--- a/paginas/login.html
+++ b/paginas/login.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONSTER OF ROCK 2024</title>
     <link rel="stylesheet" href="../css/styles.css">
