--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONSTER OF ROCK 2024</title>
     <link rel="stylesheet" href="../css/styles.css">
@@ -20,7 +21,7 @@
                 <li><a href="../paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <a href="https://www.facebook.com/" target="_blank"><img src="..img/iconos/facebook.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png" alt=""></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
