--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONSTER OF ROCK 2024</title>
     <link rel="stylesheet" href="../css/styles.css">
@@ -99,7 +100,7 @@
                         <img src="../img/iconos/instagram.png" alt="">
                     </a>
                     <a href="https://twitter.com/" target="_blank" class="tw">
-                        <img src="./img/iconos/gorjeo.png" alt="">
+                        <img src="../img/iconos/gorjeo.png" alt="">
                     </a>
                 </div>
             </div>
