--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -97,7 +97,7 @@
                     1996 —con excepción de
                     1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
                     noroeste de Leicestershire</p>
-                <p>Desde 1980 a 1996.</p>
+                <p>Since 1980.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
