--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -128,7 +128,7 @@
                     1996 —con excepción de
                     1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
                     noroeste de Leicestershire</p>
-                <p>Desde 1980 a 1996.</p>
+                <p>Since 1980.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="g2">
-            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados.Luka Leguizamon ;)</small>
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;)</small>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
