terminando los querys

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="nav">
+        <nav class="nav">
             <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" alt=""></a></div>
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn">
@@ -32,7 +32,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="./img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="./img/iconos/gorjeo.png" alt=""></a>
             </div>
-        </div>
+        </nav>
         <ul class="nav-menu">
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Noticias</a></li>
@@ -82,7 +82,7 @@
         </section>
         <footer class="pie-de-pagina">
             <div class="g1">
-                <div class="box">
+                <div class="box1">
                     <figure>
                         <a href="./index.html">
                             <img src="./img/logo-monsterofrock.png" alt="" />
@@ -94,7 +94,7 @@
                     <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
                         1996 —con excepción de
                         1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
-                        noroeste de Leicestershire</p>
+                        noroe
                     <p>Since 1980.</p>
                 </div>
                 <div class="box">
