--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="nav">
+        <nav class="nav">
             <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -25,49 +25,49 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
-        </div>
+        </nav>
     </header>
     <div class="fondo-shows">
         <div class="contenedor">
             <div class="contenedor-conciertos">
-                <div class="card" style="background-image: url('../img/grilla-concierto/buenosaires.jpg')">
+                <div class="card1">
                     <div class="textos">
                         <h3>Buenos Aires</h3>
                         <p>1 de Marzo 2024</p>
                     </div>
                 </div>
-                <div class="card" style="background-image: url('../img/grilla-concierto/catamarca.jpg')">
+                <div class="card2">
                     <div class="textos">
                         <h3>La pampa</h3>
                         <p>2 de mayo 2024</p>
                     </div>
                 </div>
-                <div class="card" style="background-image: url('../img/grilla-concierto/lapampa.jpg')">
+                <div class="card3">
                     <div class="textos">
                         <h3>Catamarca</h3>
                         <p>23 de junio 2024</p>
                     </div>
                 </div>
-                <div class="card" style="background-image: url('../img/grilla-concierto/caba.jpg')">
+                <div class="card4">
                     <div class="textos">
                         <h3>Cordoba</h3>
                         <p>15 de julio 2024</p>
                     </div>
                 </div>
-                <div class="card" style="background-image: url('../img/grilla-concierto/santacruz.jpg')">
+                <div class="card5">
                     <div class="textos">
                         <h3>Santa Cruz</h3>
                         <p>13 de abril 2024</p>
                     </div>
                 </div>
-                <div class="card" style="background-image: url('../img/grilla-concierto/entrerios.jpg')">
+                <div class="card6">
                     <div class="textos">
                         <h3>Entre Rios</h3>
                         <p>2 de abril 2024</p>
                     </div>
                 </div>
             </div>
-            <div class="banner" style="background-image: url('../img/grilla-concierto/cartel.jpg')">
+            <div class="banner">
                 <h3>LEYENDAS DEL ROCK</h3>
                 <ul>
                     <li>METALLICA</li>
@@ -84,7 +84,7 @@
     </div>
     <footer class="pie-de-pagina">
         <div class="g1">
-            <div class="box">
+            <div class="box1">
                 <figure>
                     <a href="../index.html">
                         <img src="../img/logo-monsterofrock.png" alt="" />
