--- a/paginas/login.html
+++ b/paginas/login.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="nav">
+        <nav class="nav">
             <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -25,7 +25,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
-        </div>
+        </nav>
     </header>
     <div class="fondo-login">
         <div class="foto-login">
@@ -53,7 +53,7 @@
     </div>
     <footer class="pie-de-pagina">
         <div class="g1">
-            <div class="box">
+            <div class="box1">
                 <figure>
                     <a href="../index.html">
                         <img src="../img/logo-monsterofrock.png" alt="" />
