--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="nav">
+        <nav class="nav">
             <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -27,7 +27,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
-        </div>
+        </nav>
     </header>
     <div class="slipknot">
         <div id="carouselE" class="carousel slide" data-bs-ride="carousel">
@@ -115,7 +115,7 @@
     </div>
     <footer class="pie-de-pagina">
         <div class="g1">
-            <div class="box">
+            <div class="box1">
                 <figure>
                     <a href="../index.html">
                         <img src="../img/logo-monsterofrock.png" alt="" />
