--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="nav">
+        <nav class="nav">
             <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -25,7 +25,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
                 <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
             </div>
-        </div>
+        </nav>
     </header>
     <div class="fondo">
         <div class="container-sponsor">
@@ -87,22 +87,19 @@
                 <h2>SIGUENOS</h2>
                 <div class="redsocial">
                     <a href="https://www.facebook.com/" target="_blank"" class=" fb">
-                        <img src="./img/iconos/facebook.png" alt="">
+                        <img src="../img/iconos/facebook.png" alt="">
                     </a>
                     <a href="https://www.instagram.com/" target="_blank" class="ig">
-                        <img src="./img/iconos/instagram.png" alt="">
+                        <img src="../img/iconos/instagram.png" alt="">
                     </a>
                     <a href="https://twitter.com/" target="_blank" class="tw">
-                        <img src="./img/iconos/gorjeo.png" alt="">
+                        <img src="../img/iconos/gorjeo.png" alt="">
                     </a>
                 </div>
             </div>
         </div>
         <div class="g2">
             <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;)</small>
-        </div>
-        <div class="g2">
-            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;) </small>
         </div>
     </footer>
 </body>
