--- a/index.html
+++ b/index.html
@@ -55,23 +55,27 @@
             </div>
         </div>
         <div class="sponsor"></div>
-        <section class="section-metallica">
-            <div class="metallica-container1">
-                <h2>Vuelve Metallica</h2>
-                <p>La iconica banda metallica vuelve y mas presente que nunca luego de haber sido de las protagonista en
-                    el iconico
-                    concierto en el 1991 donde hubo un total de 1.6 millones de personas</p>
-                <a href="#" class="btn-1">Mas informacion</a>
-            </div>
-            <div class="metallica-container2"></div>
-        </section>
-        <section class="section-expansion">
-            <div class="expansion-container2"></div>
-            <div class="expansion-container1">
-                <h2>Expandimos el espacio</h2>
-                <p>En cada locación donde se realice el festival se ampliara un 50% de capacidad para que todos puedan
-                    ir.</p>
-            </div>
+        <section class="info">
+            <section class="section-metallica">
+                <div class="metallica-container1">
+                    <h2>Vuelve Metallica</h2>
+                    <p>La iconica banda metallica vuelve y mas presente que nunca luego de haber sido de las
+                        protagonista en
+                        el iconico
+                        concierto en el 1991 donde hubo un total de 1.6 millones de personas</p>
+                    <a href="#" class="btn-1">Mas informacion</a>
+                </div>
+                <div class="metallica-container2"></div>
+            </section>
+            <section class="section-expansion">
+                <div class="expansion-container2"></div>
+                <div class="expansion-container1">
+                    <h2>Expandimos el espacio</h2>
+                    <p>En cada locación donde se realice el festival se ampliara un 50% de capacidad para que todos
+                        puedan
+                        ir.</p>
+                </div>
+            </section>
         </section>
         <section class="section-cartel"></section>
         <section class="section-mapa">
@@ -80,43 +84,43 @@
                 <a href="./paginas/shows.html" class="btn-1">LOCACIONES</a>
             </div>
         </section>
-        <footer class="pie-de-pagina">
-            <div class="g1">
-                <div class="box1">
-                    <figure>
-                        <a href="./index.html">
-                            <img src="./img/logo-monsterofrock.png" alt="" />
-                        </a>
-                    </figure>
-                </div>
-                <div class="box">
-                    <h2>SOBRE NOSOTROS</h2>
-                    <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
-                        1996 —con excepción de
-                        1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
-                        noroe
-                    <p>Since 1980.</p>
-                </div>
-                <div class="box">
-                    <h2>SIGUENOS</h2>
-                    <div class="redsocial">
-                        <a href="https://www.facebook.com/" target="_blank"" class=" fb">
-                            <img src="./img/iconos/facebook.png" alt="">
-                        </a>
-                        <a href="https://www.instagram.com/" target="_blank" class="ig">
-                            <img src="./img/iconos/instagram.png" alt="">
-                        </a>
-                        <a href="https://twitter.com/" target="_blank" class="tw">
-                            <img src="./img/iconos/gorjeo.png" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="g2">
-                <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;)</small>
-            </div>
-        </footer>
     </main>
+    <footer class="pie-de-pagina">
+        <div class="g1">
+            <div class="box1">
+                <figure>
+                    <a href="./index.html">
+                        <img src="./img/logo-monsterofrock.png" alt="" />
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
+                    1996 —con excepción de
+                    1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
+                    noroe
+                <p>Since 1980.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redsocial">
+                    <a href="https://www.facebook.com/" target="_blank"" class=" fb">
+                        <img src="./img/iconos/facebook.png" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="ig">
+                        <img src="./img/iconos/instagram.png" alt="">
+                    </a>
+                    <a href="https://twitter.com/" target="_blank" class="tw">
+                        <img src="./img/iconos/gorjeo.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="g2">
+            <small>&copy; 2023 <b>MONSTER OF ROCK</b> - Todos los derechos reservados. Luka Leguizamon ;)</small>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
