--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
+            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" class="img"></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../paginas/noticias.html">Noticias</a></li>
@@ -75,6 +75,13 @@
     </div>
     <footer class="pie-de-pagina">
         <div class="g1">
+            <div class="box1">
+                <figure>
+                    <a href="./index.html">
+                        <img src="../img/logo-monsterofrock.png" alt="" />
+                    </a>
+                </figure>
+            </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
                 <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
