--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" alt=""></a></div>
+            <div class="logo"><a href="./index.html"><img src="./img/logo-monsterofrock.png" class="img"></a></div>
             <input type="checkbox" id="check">
             <label for="check" class="bar-btn">
                 <i class="fa-solid fa-bars"></i>
