--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" alt=""></a></div>
+            <div class="logo"><a href="../index.html"><img src="../img/logo-monsterofrock.png" class="img"></a></div>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../paginas/noticias.html">Noticias</a></li>
