--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="./img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MONSTER OF ROCK 2024</title>
+    <meta name="description"
+        content="Bienvenidos a la pagina del mejor festival de rock de la historia, Monster of Rock. Consegui aca tus entradas.">
+    <meta name="keywords" content="rock, festival, heavymetal, monster of rock">
+    <title>MONSTER OF ROCK 2024 | Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -99,7 +102,7 @@
                 <p>El Monsters of Rock fue un festival de rock que se realizó en Inglaterra entre los años 1980 y
                     1996 —con excepción de
                     1989 y 1993— celebrado una vez al año en el mes de agosto en el autódromo Donington Park, al
-                    noroe
+                    noroeste.
                 <p>Since 1980.</p>
             </div>
             <div class="box">
