terminando el mediaq

--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -54,7 +54,8 @@
             <div class="sponsor6">
                 <a href="https://www.budweiser.com.ar/" target="_blank"><img src="../img/sponsors/budweiser.png"
                         class="bud" alt=""></a>
-                <a href="https://www.axionenergy.com/" target="_blank"><img src="../img/sponsors/axion.png"></a>
+                <a href="https://www.axionenergy.com/" target="_blank"><img src="../img/sponsors/axion.png"
+                        class="axion" alt=""></a>
             </div>
             <div class="sponsor-titulo">
                 <h2>COLABORAN</h2>
@@ -62,17 +63,18 @@
             <div class="sponsor8">
                 <a href="https://www.fernetbranca.com/es" target="_blank"><img src="../img/sponsors/fernet.png"
                         alt=""></a>
-                <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png" alt=""></a>
+                <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png"
+                        class="fila"></a>
                 <a href="https://www.laespumeria.com/" target="_blank"><img src="../img/sponsors/laespumeroa.png"
                         alt=""></a>
-                <a href="#" target="_blank"><img src="../img/sponsors/united.png alt=""></a>
             </div>
             <div class=" sponsor-titulo">
-                    <h2>PRODUCEN</h2>
+                <h2>PRODUCEN</h2>
             </div>
             <div class="sponsor10">
                 <a href="https://dfentertainment.com/" target="_blank"><img src="../img/sponsors/df.png" alt=""></a>
-                <a href="https://www.c3presents.com/" target="_blank"><img src="../img/sponsors/c3.png" alt=""></a>
+                <a href="https://www.c3presents.com/" target="_blank"><img src="../img/sponsors/c3.png" class="c3"
+                        alt=""></a>
             </div>
         </div>
     </div>
