terminando el mediaq

--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -24,9 +24,11 @@
                 <li><a href="../paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
-                <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png"
+                        alt="Instragram"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt="Twitter"></a>
             </div>
         </nav>
     </header>
@@ -37,44 +39,45 @@
             </div>
             <div class="sponsor2">
                 <a href="https://www.flow.com.ar/" target="_blank"><img
-                        src="../img/sponsors/62b9be26c9f7d62f82997f0b_flow-p-500.png" alt=""></a>
+                        src="../img/sponsors/62b9be26c9f7d62f82997f0b_flow-p-500.png" alt="Flow"></a>
             </div>
             <div class="sponsor-titulo">
                 <h2>MEDIOS DE PAGO</h2>
             </div>
             <div class="sponsor4">
                 <a href="https://www.santander.com.ar/" target="_blank"><img src="../img/sponsors/santander.png"
-                        alt=""></a>
+                        alt="Santander"></a>
                 <a href="https://www.americanexpress.com/es-ar/" target="_blank"><img src="../img/sponsors/amex.png"
-                        alt=""></a>
+                        alt="AmericanExpress"></a>
             </div>
             <div class="sponsor-titulo">
                 <h2>INVITAN</h2>
             </div>
             <div class="sponsor6">
                 <a href="https://www.budweiser.com.ar/" target="_blank"><img src="../img/sponsors/budweiser.png"
-                        class="bud" alt=""></a>
+                        class="bud" alt="Budweiser"></a>
                 <a href="https://www.axionenergy.com/" target="_blank"><img src="../img/sponsors/axion.png"
-                        class="axion" alt=""></a>
+                        class="axion" alt="Axion"></a>
             </div>
             <div class="sponsor-titulo">
                 <h2>COLABORAN</h2>
             </div>
             <div class="sponsor8">
                 <a href="https://www.fernetbranca.com/es" target="_blank"><img src="../img/sponsors/fernet.png"
-                        alt=""></a>
-                <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png"
-                        class="fila"></a>
+                        alt="Fernet"></a>
+                <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png" class="fila"
+                        alt="Fila"></a>
                 <a href="https://www.laespumeria.com/" target="_blank"><img src="../img/sponsors/laespumeroa.png"
-                        alt=""></a>
+                        alt="LaEspumeria"></a>
             </div>
             <div class=" sponsor-titulo">
                 <h2>PRODUCEN</h2>
             </div>
             <div class="sponsor10">
-                <a href="https://dfentertainment.com/" target="_blank"><img src="../img/sponsors/df.png" alt=""></a>
+                <a href="https://dfentertainment.com/" target="_blank"><img src="../img/sponsors/df.png"
+                        alt="dfentertainment"></a>
                 <a href="https://www.c3presents.com/" target="_blank"><img src="../img/sponsors/c3.png" class="c3"
-                        alt=""></a>
+                        alt="c3presents"></a>
             </div>
         </div>
     </div>
@@ -83,7 +86,7 @@
             <div class="box1">
                 <figure>
                     <a href="./index.html">
-                        <img src="../img/logo-monsterofrock.png" alt="" />
+                        <img src="../img/logo-monsterofrock.png" alt="MonsterOfRock" />
                     </a>
                 </figure>
             </div>
@@ -99,13 +102,13 @@
                 <h2>SIGUENOS</h2>
                 <div class="redsocial">
                     <a href="https://www.facebook.com/" target="_blank"" class=" fb">
-                        <img src="../img/iconos/facebook.png" alt="">
+                        <img src="../img/iconos/facebook.png" alt="Facebook">
                     </a>
                     <a href="https://www.instagram.com/" target="_blank" class="ig">
-                        <img src="../img/iconos/instagram.png" alt="">
+                        <img src="../img/iconos/instagram.png" alt="Instragram">
                     </a>
                     <a href="https://twitter.com/" target="_blank" class="tw">
-                        <img src="../img/iconos/gorjeo.png" alt="">
+                        <img src="../img/iconos/gorjeo.png" alt="Twitter">
                     </a>
                 </div>
             </div>
