--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -24,9 +24,11 @@
                 <li><a href="../paginas/login.html">Iniciar sesion</a></li>
             </ul>
             <div class="redes">
-                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png" alt=""></a>
-                <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank"><img src="../img/iconos/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="../img/iconos/instagram.png"
+                        alt="Instragram"></a>
+                <a href="https://twitter.com/" target="_blank"><img src="../img/iconos/gorjeo.png" alt="Twitter"></a>
             </div>
         </nav>
     </header>
@@ -90,7 +92,7 @@
             <div class="box1">
                 <figure>
                     <a href="../index.html">
-                        <img src="../img/logo-monsterofrock.png" alt="" />
+                        <img src="../img/logo-monsterofrock.png" alt="MonsterOfRock" />
                     </a>
                 </figure>
             </div>
@@ -106,13 +108,13 @@
                 <h2>SIGUENOS</h2>
                 <div class="redsocial">
                     <a href="https://www.facebook.com/" target="_blank"" class=" fb">
-                        <img src="../img/iconos/facebook.png" alt="">
+                        <img src="../img/iconos/facebook.png" alt="Facebook">
                     </a>
                     <a href="https://www.instagram.com/" target="_blank" class="ig">
-                        <img src="../img/iconos/instagram.png" alt="">
+                        <img src="../img/iconos/instagram.png" alt="Instragram">
                     </a>
                     <a href="https://twitter.com/" target="_blank" class="tw">
-                        <img src="../img/iconos/gorjeo.png" alt="">
+                        <img src="../img/iconos/gorjeo.png" alt="Twitter">
                     </a>
                 </div>
             </div>
