--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -68,7 +68,7 @@
                 <a href="https://tienda.fila.com.ar/" target="_blank"><img src="../img/sponsors/fila.png" class="fila"
                         alt="Fila"></a>
                 <a href="https://www.laespumeria.com/" target="_blank"><img src="../img/sponsors/laespumeroa.png"
-                        alt="LaEspumeria"></a>
+                        class="laespumeria" alt="LaEspumeria"></a>
             </div>
             <div class=" sponsor-titulo">
                 <h2>PRODUCEN</h2>
