terminando de corregir

--- a/paginas/sponsor.html
+++ b/paginas/sponsor.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Bienvenidos a la pagina del mejor festival de rock de la historia, Monster of Rock. Consegui aca tus entradas.">
-    <meta name="keywords" content="rock, festival, heavymetal, monster of rock">
+        content="Bienvenidos a la pagina de sponsors de Monster of Rock, aqui podran ver a todos los que tambien estaran presentes en el festival">
+    <meta name="keywords" content="sponsors, bebidas, entretenimiento, rock.">
     <title>MONSTER OF ROCK 2024 | Sponsor</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -48,7 +48,7 @@
                 <a href="https://www.santander.com.ar/" target="_blank"><img src="../img/sponsors/santander.png"
                         alt="Santander"></a>
                 <a href="https://www.americanexpress.com/es-ar/" target="_blank"><img src="../img/sponsors/amex.png"
-                        alt="AmericanExpress"></a>
+                        class="AmericanExpress" alt="AmericanExpress"></a>
             </div>
             <div class="sponsor-titulo">
                 <h2>INVITAN</h2>
@@ -75,7 +75,7 @@
             </div>
             <div class="sponsor10">
                 <a href="https://dfentertainment.com/" target="_blank"><img src="../img/sponsors/df.png"
-                        alt="dfentertainment"></a>
+                        class="dfentertainment" alt="dfentertainment"></a>
                 <a href="https://www.c3presents.com/" target="_blank"><img src="../img/sponsors/c3.png" class="c3"
                         alt="c3presents"></a>
             </div>
