--- a/paginas/login.html
+++ b/paginas/login.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Bienvenidos a la pagina del mejor festival de rock de la historia, Monster of Rock. Consegui aca tus entradas.">
-    <meta name="keywords" content="rock, festival, heavymetal, monster of rock">
+    <meta name="description" content="Bienvenidos a la pagina de login del festival, Monster of Rock.">
+    <meta name="keywords" content="rock, iniciar sesion.">
     <title>MONSTER OF ROCK 2024 | Login</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
