--- a/paginas/noticias.html
+++ b/paginas/noticias.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Bienvenidos a la pagina del mejor festival de rock de la historia, Monster of Rock. Consegui aca tus entradas.">
-    <meta name="keywords" content="rock, festival, heavymetal, monster of rock">
+    <meta name="description" content="Bienvenidos a la pagina noticias del festival, Monster of Rock">
+    <meta name="keywords" content="rock, festival, heavymetal, noticias, bandas.">
     <title>MONSTER OF ROCK 2024 | Noticias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
