--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="../img/icono-web.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Bienvenidos a la pagina del mejor festival de rock de la historia, Monster of Rock. Consegui aca tus entradas.">
-    <meta name="keywords" content="rock, festival, heavymetal, monster of rock">
+        content="Bienvenidos a la pagina shows donde podran encontrar las ubicaciones del festival, Monster of Rock.">
+    <meta name="keywords" content="rock, festival, ubicaciones, Argentina.">
     <title>MONSTER OF ROCK 2024 | Shows</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
