corrigiendo para el final

--- a/paginas/shows.html
+++ b/paginas/shows.html
@@ -35,37 +35,37 @@
     <div class="fondo-shows">
         <div class="contenedor">
             <div class="contenedor-conciertos">
-                <div class="card1">
+                <div class="card1 card">
                     <div class="textos">
                         <h3>Buenos Aires</h3>
                         <p>1 de Marzo 2024</p>
                     </div>
                 </div>
-                <div class="card2">
+                <div class="card2 card">
                     <div class="textos">
                         <h3>La pampa</h3>
                         <p>2 de mayo 2024</p>
                     </div>
                 </div>
-                <div class="card3">
+                <div class="card3 card">
                     <div class="textos">
                         <h3>Catamarca</h3>
                         <p>23 de junio 2024</p>
                     </div>
                 </div>
-                <div class="card4">
+                <div class="card4 card">
                     <div class="textos">
                         <h3>Cordoba</h3>
                         <p>15 de julio 2024</p>
                     </div>
                 </div>
-                <div class="card5">
+                <div class="card5 card">
                     <div class="textos">
                         <h3>Santa Cruz</h3>
                         <p>13 de abril 2024</p>
                     </div>
                 </div>
-                <div class="card6">
+                <div class="card6 card">
                     <div class="textos">
                         <h3>Entre Rios</h3>
                         <p>2 de abril 2024</p>
